fix(galileo): card bottom border color

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -38,7 +38,7 @@
     .bento-card .card-header {
       background-color: @blue !important;
       color: @text !important;
-      border-bottom-color: @sapphire !important;
+      border-bottom-color: @lavender !important;
     }
 
     .navbar.top {
