feat(galileo): add form control support

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -77,5 +77,11 @@
       background: @red !important;
       color: @base !important;
     }
+
+    .form-control {
+      color: @overlay0 !important;
+      background-color: @text !important;
+      border-color: @subtext1 !important;
+    }
   }
 }
