feat(galileo): add search bar

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -79,9 +79,19 @@
     }
 
     .form-control {
-      color: @overlay0 !important;
-      background-color: @text !important;
-      border-color: @subtext1 !important;
+      color: @subtext1 !important;
+      background-color: @mantle !important;
+      border-color: @text !important;
+    }
+
+    .gal-search-label {
+      background-color: @crust !important;
+      color: @text !important;
+    }
+
+
+    .input-group-text {
+      border-color: @text !important;
     }
   }
 }
