feat(galileo): add search button

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -73,9 +73,13 @@
       background: @red !important;
     }
 
-    a.support {
+    a.support. .btn-danger:hover {
       background: @red !important;
       color: @base !important;
+    }
+
+    .btn-danger:hover {
+      border-color: @red !important;
     }
 
     .form-control {
@@ -89,6 +93,11 @@
       color: @text !important;
     }
 
+    .gal-search-button {
+      border-color: @blue !important;
+      background-color: @blue !important;
+      color: @base !important;
+    }
 
     .input-group-text {
       border-color: @text !important;
