fix(galileo): syntax

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -73,7 +73,7 @@
       background: @red !important;
     }
 
-    a.support. .btn-danger:hover {
+    a.support, .btn-danger:hover {
       background: @red !important;
       color: @base !important;
     }
