feat: theme comment highlight

--- a/styles/codeforces/catppuccin.user.less
+++ b/styles/codeforces/catppuccin.user.less
@@ -420,10 +420,14 @@
 
     .highlight-blue {
       background: fade(@blue, 20%) !important;
-      border-color: @overlay0 !important;
+      border-color: @transparent !important;
       * {
-        border-color: @overlay0 !important;
+        border-color: @transparent !important;
       }
+    }
+    .highlight {
+      background-color: fade(@yellow, 20%) !important;
+      border-color: transparent !important;
     }
 
     .mobile-toolbar,
