fix: add missing shades

--- a/styles/komodo/catppuccin.user.less
+++ b/styles/komodo/catppuccin.user.less
@@ -79,11 +79,15 @@
       path[stroke="#@{hex}"] {
         stroke: @color;
       }
+      svg.stroke-@{name}-400,
       svg.stroke-@{name}-500,
-      svg.stroke-@{name}-600 {
+      svg.stroke-@{name}-600,
+      svg.stroke-@{name}-700 {
         stroke: @color;
       }
       .text-@{name}-400,
+      .text-@{name}-500,
+      .text-@{name}-600,
       .text-@{name}-700 {
         color: @color;
       }
