--- a/styles/arch-linux/catppuccin.user.less
+++ b/styles/arch-linux/catppuccin.user.less
@@ -256,10 +256,15 @@
       background-color: @base !important;
     }
 
-    code, pre, .codebox {
+    pre, pre code, .codebox, .codebox pre, .codebox code {
       color: @text !important;
       background-color: @mantle !important;
       border-color: @overlay0 !important;
+    }
+
+    code {
+      color: @text !important;
+      background-color: @surface0 !important;
     }
 
     label, legend, .spacer {
