Push quick change for invisibility.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -500,7 +500,7 @@
     --theme-dc-color-mixtral-main: @peach !important;
     --theme-dc-color-layer0: @base !important;
     --theme-dc-color-layer1: @surface1 !important;
-    --theme-dc-color-layer2: @mantle !important;
+    --theme-dc-color-layer2: @surface0 !important;
     --theme-dc-color-layer3: @surface1 !important;
     --theme-dc-color-model-icon-active: @text !important;
     --theme-dc-color-border-01: @overlay0 !important;
