feat: add login url

--- a/styles/galileo/catppuccin.user.less
+++ b/styles/galileo/catppuccin.user.less
@@ -100,3 +100,23 @@
     }
   }
 }
+
+@-moz-document regexp("https://login\\.[^/]+\\.galileo\\.usg\\.edu/") {
+  :root {
+    @media (prefers-color-scheme: light) {
+      #catppuccin(@lightFlavor);
+    }
+    @media (prefers-color-scheme: dark) {
+      #catppuccin(@darkFlavor);
+    }
+  }
+
+  #catppuccin(@flavor) {
+    #lib.palette();
+    #lib.defaults();
+
+    a {
+      color: @blue !important;
+    }
+  }
+}
