feat(17track): add some theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -38,5 +38,17 @@
   #catppuccin(@flavor) {
     #lib.palette();
     #lib.defaults();
+
+	  .p-2, .flex .min-h-0{
+		  background-color: @mantle !important;
+	  }
+
+	  .text-white, .text-text-primary {
+		  color: @text !important;
+	  }
+
+	  .text-text-secondary {
+		  color: @subtext1 !important;
+	  }
   }
 }
