feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -39,16 +39,25 @@
     #lib.palette();
     #lib.defaults();
 
+    .gap-2 {
+      background-color: @base !important;
+      color: @text !important;
+    }
+
 	  .p-2, .flex .min-h-0{
 		  background-color: @mantle !important;
 	  }
 
-	  .text-white, .text-text-primary {
+	  .text-white, .text-text-primary, .text-foreground {
 		  color: @text !important;
 	  }
 
-	  .text-text-secondary {
+	  .text-text-secondary, .text-muted-foreground {
 		  color: @subtext1 !important;
+	  }
+
+	  .text-text-link {
+		  color: @blue !important;
 	  }
   }
 }
