fix(17track): update item backgrounds

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -44,7 +44,7 @@
       color: @text !important;
     }
 
-	  .p-2, .flex .min-h-0{
+	  .p-2, .flex .min-h-0, .gap-2 .flex-1{
 		  background-color: @mantle !important;
 	  }
 
