feat(17track): theme icons

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -36,28 +36,60 @@
   }
 
   #catppuccin(@flavor) {
-    #lib.palette();
-    #lib.defaults();
+		#lib.palette();
+		#lib.defaults();
 
-    .gap-2 {
-      background-color: @base !important;
-      color: @text !important;
-    }
-
-	  .p-2, .flex .min-h-0, .gap-2 .flex-1{
-		  background-color: @mantle !important;
-	  }
-
-	  .text-white, .text-text-primary, .text-foreground {
+		.gap-2 {
+		  background-color: @base !important;
 		  color: @text !important;
-	  }
+		}
 
-	  .text-text-secondary, .text-muted-foreground {
+		.p-2, .flex .min-h-0, .gap-2 .flex-1 {
+			background-color: @mantle !important;
+		}
+
+		.text-white, .text-text-primary, .text-foreground {
+		  color: @text !important;
+		}
+
+		.text-text-secondary, .text-muted-foreground {
 		  color: @subtext1 !important;
-	  }
+		}
 
-	  .text-text-link {
+		.text-text-link {
 		  color: @blue !important;
-	  }
+		}
+
+		svg path[fill="white"] {
+		  fill: @base !important;
+		}
+
+		svg path[fill="#F44336"] {
+			fill: @maroon !important;
+		}
+
+		svg path[fill="#43A047"] {
+			fill: @green !important;
+		}
+
+		svg path[fill="#FF6F00"] {
+			fill: @peach !important;
+		}
+
+		svg path[fill="#B71C1C"] {
+			fill: @red !important;
+		}
+
+		svg path[fill="#0D47A1"], svg path[fill="#003A9B"] {
+			fill: @blue !important;
+		}
+
+		svg path[fill="#2196F3"] {
+			fill: @sky !important;
+		}
+
+		svg path[fill="#757575"] {
+			fill: @subtext1 !important;
+		}
   }
 }
