feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -39,7 +39,20 @@
 		#lib.palette();
 		#lib.defaults();
 
-		.gap-2 {
+		* {
+		  border-color: @surface0 !important;
+		}
+
+		body, .text-white, .text-text-primary, .text-foreground {
+		background-color: @base !important;
+		  color: @text !important;
+		}
+
+		.h-16 {
+			background-color: @base !important;
+		}
+
+		.gap-2, .gap-6 {
 		  background-color: @base !important;
 		  color: @text !important;
 		}
@@ -48,16 +61,16 @@
 			background-color: @mantle !important;
 		}
 
-		.text-white, .text-text-primary, .text-foreground {
-		  color: @text !important;
-		}
-
 		.text-text-secondary, .text-muted-foreground {
 		  color: @subtext1 !important;
 		}
 
-		.text-text-link {
+		.text-text-link, .text-primary {
 		  color: @blue !important;
+		}
+
+		.border.border-primary {
+			border-color: @text !important;
 		}
 
 		svg path[fill="white"] {
