feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -38,13 +38,32 @@
   #catppuccin(@flavor) {
 		#lib.palette();
 		#lib.defaults();
+    --package-status-intransit: @sapphire !important;
+    --package-status-alert: @peach !important;
+    --package-status-inforeceived: @sky !important;
+    --package-status-pending: @subtext1 !important;
+    --package-status-pickup: @blue !important;
+    --package-status-expired: @red !important;
+    --package-status-undelivered: @maroon !important;
+    --package-status-notfound: @subtext1 !important;
+    --package-status-delivered: @green !important;
+    --package-status-outfordelivery: @blue !important;
+    --package-status-icon_inverse: @text !important;
+    --package-status-air-booked: var(--package-status-inforeceived) !important;
+    --package-status-air-intransit: var(--package-status-intransit) !important;
+    --package-status-air-delivered: var(--package-status-delivered) !important;
+    --package-status-air-arrived: var(--package-status-outfordelivery) !important;
+    --package-status-air-received: @teal !important;
+    --package-status-air-notified: var(--package-status-pickup) !important;
+    --package-status-air-notfound: var(--package-status-notfound) !important;
+    --yq-red-600: @red !important;
 
 		* {
 		  border-color: @surface0 !important;
 		}
 
 		body, .text-white, .text-text-primary, .text-foreground {
-		background-color: @base !important;
+		  background-color: @base !important;
 		  color: @text !important;
 		}
 
