feat(17track): theme footer

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -67,6 +67,10 @@
 		  color: @text !important;
 		}
 
+		[data-sidebar="footer"] {
+		  background-color: @base !important;
+		}
+
 		.text-text-secondary, .text-muted-foreground {
 		  color: @subtext1 !important;
 		}
@@ -87,6 +91,10 @@
 			background-color: @rosewater !important;
 		}
 
+		.bg-primary {
+			background-color: @blue !important;
+		}
+
 		svg path[fill="white"] {
 			fill: @base !important;
 		}
@@ -103,7 +111,7 @@
 			fill: @peach !important;
 		}
 
-		svg path[fill="#B71C1C"] {
+		svg path[fill="#B71C1C"], svg path[fill="#DC2626"] {
 			fill: @red !important;
 		}
 
