fix(17track): svgs theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -95,8 +95,12 @@
 			background-color: @blue !important;
 		}
 
-		svg path[fill="white"] {
+		a:is([title="Not found"], [title="In transit"], [title="Expired"], [title="Pick up"], [title="Undelivered"], [title="Delivered"], [title="Alert"]) svg path[fill="white"] {
 			fill: @base !important;
+		}
+
+		svg path[fill="white"] {
+			fill: @text;
 		}
 
 		svg path[fill="#F44336"] {
@@ -107,7 +111,7 @@
 			fill: @green !important;
 		}
 
-		svg path[fill="#FF6F00"] {
+		svg path[fill="#FF6F00"], svg path[fill="#FF8C00"] {
 			fill: @peach !important;
 		}
 
