fix(17track): blue svg path colour change

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -119,7 +119,7 @@
 			fill: @red !important;
 		}
 
-		svg path[fill="#0D47A1"], svg path[fill="@{text}"] {
+		svg path[fill="#0D47A1"], svg path[fill="#003A9B"] {
 			fill: @blue !important;
 		}
 
