feat(17track): add original css variables and a bit of theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -38,6 +38,39 @@
   #catppuccin(@flavor) {
 		#lib.palette();
 		#lib.defaults();
+
+		/*--background: 0 0% 100%;
+		--foreground: 240 10% 4%;
+		--card: 0 0% 100%;
+		--card-foreground: 240 10% 4%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 0 0% 3.9%;
+		--primary: 238 100% 36%;
+		--primary-foreground: 0 0% 98%;
+		--secondary: 0 0% 96.1%;
+		--secondary-foreground: 0 0% 9%;
+		--muted: 0 0% 96.1%;
+		--muted-foreground: 0 0% 45.1%;
+		--accent: 0 0% 96.1%;
+		--accent-foreground: 0 0% 9%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 0 0% 89.8%;
+		--input: 0 0% 89.8%;
+		--ring: 0 0% 3.9%;
+		--chart-1: 12 76% 61%;
+		--chart-2: 173 58% 39%;
+		--chart-3: 197 37% 24%;
+		--chart-4: 43 74% 66%;
+		--chart-5: 27 87% 67%;
+		--sidebar-background: 0 0% 98%;
+		--sidebar-foreground: 0 0% 100%;
+		--sidebar-primary: 240 5.9% 10%;
+		--sidebar-primary-foreground: 0 0% 98%;
+		--sidebar-accent: 0 0% 15%;
+		--sidebar-accent-foreground: 0 0% 100%;
+		--sidebar-border: 220 13% 91%;
+		--sidebar-ring: 217.2 91.2% 59.8%;*/
 		--package-status-intransit: @sapphire !important;
 		--package-status-alert: @peach !important;
 		--package-status-inforeceived: @sky !important;
@@ -56,7 +89,62 @@
 		--package-status-air-received: @teal !important;
 		--package-status-air-notified: var(--package-status-pickup) !important;
 		--package-status-air-notfound: var(--package-status-notfound) !important;
+		/*--yq-blue-1: rgba(223, 228, 247, 1);
+		--yq-blue-2: rgba(150, 164, 235, 1);
+		--yq-blue-3: rgba(106, 122, 222, 1);
+		--yq-blue-4: rgba(67, 81, 209, 1);
+		--yq-blue-5: rgba(31, 42, 196, 1);
+		--yq-blue-6: rgba(0, 7, 183, 1);
+		--yq-blue-7: rgba(0, 0, 145, 1);
+		--yq-blue-8: rgba(4, 0, 107, 1);
+		--yq-blue-9: rgba(5, 0, 69, 1);
+		--yq-blue-10: rgba(3, 0, 31, 1);
+		--yq-zinc-50: rgba(255, 255, 255, 1);
+		--yq-zinc-100: rgba(244, 244, 245, 1);
+		--yq-zinc-200: rgba(228, 228, 231, 1);
+		--yq-zinc-300: rgba(212, 212, 216, 1);
+		--yq-zinc-400: rgba(161, 161, 170, 1);
+		--yq-zinc-500: rgba(113, 113, 122, 1);
+		--yq-zinc-600: rgba(82, 82, 91, 1);
+		--yq-zinc-700: rgba(63, 63, 70, 1);
+		--yq-zinc-800: rgba(39, 39, 42, 1);
+		--yq-zinc-900: rgba(24, 24, 27, 1);
+		--yq-zinc-950: rgba(9, 9, 11, 1);
+		--yq-red-50: rgba(254, 242, 242, 1);
+		--yq-red-100: rgba(254, 226, 226, 1);
+		--yq-red-200: rgba(254, 202, 202, 1);
+		--yq-red-300: rgba(252, 165, 165, 1);
+		--yq-red-400: rgba(248, 113, 113, 1);
+		--yq-red-500: rgba(239, 68, 68, 1);*/
 		--yq-red-600: @red !important;
+		/*--yq-red-700: rgba(185, 28, 28, 1);
+		--yq-red-800: rgba(153, 27, 27, 1);
+		--yq-red-900: rgba(127, 29, 29, 1);
+		--yq-red-950: rgba(69, 10, 10, 1);
+		--yq-green-50: rgba(240, 253, 244, 1);
+		--yq-green-100: rgba(220, 252, 231, 1);
+		--yq-green-200: rgba(187, 247, 208, 1);
+		--yq-green-300: rgba(134, 239, 172, 1);
+		--yq-green-400: rgba(74, 222, 128, 1);
+		--yq-green-500: rgba(34, 197, 94, 1);
+		--yq-green-600: rgba(22, 163, 74, 1);
+		--yq-green-700: rgba(21, 128, 61, 1);
+		--yq-gray-50: rgba(255, 255, 255, 1);
+		--yq-green-800: rgba(22, 101, 52, 1);
+		--yq-green-900: rgba(20, 83, 45, 1);
+		--yq-gray-100: rgba(245, 245, 245, 1);
+		--yq-green-950: rgba(5, 46, 22, 1);
+		--yq-gray-200: rgba(229, 229, 229, 1);
+		--yq-gray-300: rgba(212, 212, 212, 1);
+		--yq-gray-400: rgba(163, 163, 163, 1);
+		--yq-gray-500: rgba(115, 115, 115, 1);
+		--yq-gray-600: rgba(82, 82, 82, 1);
+		--yq-gray-700: rgba(64, 64, 64, 1);
+		--yq-gray-800: rgba(38, 38, 38, 1);
+		--yq-gray-900: rgba(23, 23, 23, 1);
+		--yq-gray-950: rgba(10, 10, 10, 1);
+		--yq-basic-white: rgba(255, 255, 255, 1);
+		--yq-basic-black: rgba(0, 0, 0, 1);*/
 
 		* {
 		  border-color: @surface0 !important;
@@ -67,8 +155,8 @@
 		  color: @text !important;
 		}
 
-		[data-sidebar="footer"] {
-		  background-color: @base !important;
+		[style="background: rgb(23, 23, 23);"], [data-sidebar="footer"] {
+		  background-color: @crust !important;
 		}
 
 		.text-text-secondary, .text-muted-foreground {
