feat(17track): more theming

--- a/styles/17track/catppuccin.user.less
+++ b/styles/17track/catppuccin.user.less
@@ -39,8 +39,8 @@
 		#lib.palette();
 		#lib.defaults();
 
-		/*--background: 0 0% 100%;
-		--foreground: 240 10% 4%;
+		--background: @base;
+		/*--foreground: 240 10% 4%;
 		--card: 0 0% 100%;
 		--card-foreground: 240 10% 4%;
 		--popover: 0 0% 100%;
@@ -157,6 +157,10 @@
 
 		[style="background: rgb(23, 23, 23);"], [data-sidebar="footer"] {
 		  background-color: @crust !important;
+		}
+
+		.text-zinc-950 {
+		  color: @base !important;
 		}
 
 		.text-text-secondary, .text-muted-foreground {
