Remove link override, fix settings tabs.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -787,22 +787,6 @@
       }
     }
 
-    a, a:link {
-      color: @blue !important;
-
-      &:hover {
-        color: @sky !important;
-      }
-
-      &:active, &:focus {
-        color: @sapphire !important;
-      }
-
-      &:visited {
-        color: @lavender !important;
-      }
-    }
-
     .app-hero-card-buttons_chevron__eqwRE {
       filter: @text-filter !important;
     }
@@ -1662,6 +1646,24 @@
 
     .star {
       color: @overlay2;
+    }
+
+    .set-head__menu .set-tab {
+      color: @text !important;
+      background-color: @surface0 !important;
+
+      &:hover {
+        background-color: @surface1 !important;
+      }
+
+      &:active, &:focus {
+        background-color: @surface2 !important;
+      }
+
+      &.is-active {
+        color: @base !important;
+        background-color: @accent !important;
+      }
     }
 
     .set-tab,
