Some cleanups, some finalising.
Signed-off-by: Toria <ninetailedtori@uwu.gal>

--- a/styles/duckduckgo/catppuccin.user.less
+++ b/styles/duckduckgo/catppuccin.user.less
@@ -112,7 +112,13 @@
     --ddg-browser-color-window-mobile:  !important;
     --ddg-browser-color-window-toolbar-bg:  !important;
     --ddg-browser-color-window-toolbar-bg-mobile:  !important;
-    --divider-bg:  !important;
+
+    --divider-bg: @overlay1 !important;
+
+    .frm__hr {
+      border-color: @overlay1 !important;
+    }
+
     --duck-ai-keyboard-text:  !important;
     --duck-ai-shortcut-text:  !important;
     --duck-ai-shortcut-text--active:  !important;
@@ -742,6 +748,38 @@
       }
     }
 
+    a {
+      color: @blue;
+
+      &:hover {
+        color: @sky;
+      }
+
+      &:active, &:focus {
+        color: @sapphire;
+      }
+
+      &:visited {
+        color: @lavender;
+      }
+    }
+
+    body, content, content p {
+      color: @text !important;
+    }
+
+    .newsletter_hero__j3WeG
+      .newsletter_illustration__UNcxq
+      .newsletter_city__3vJSi {
+      filter: @accent-filter !important;
+    }
+
+    .newsletter_testimonials__lmZAW
+      .newsletter_testimonial__NP_ab
+      .newsletter_quote__AsPjb::before {
+      color: @accent !important;
+    }
+
     .chip-select_option__Gh6br.chip-select_isSelected__RpaRr {
       color: var(--chip-select-option-text-selected) !important;
     }
@@ -912,6 +950,77 @@
           }
         }
       }
+    }
+
+    .btn {
+      color: @text !important;
+      background-color: @surface0 !important;
+
+      &:hover {
+        background-color: @surface1 !important;
+      }
+
+      &:active, &:focus {
+        background-color: @surface2 !important;
+      }
+
+      &:not(.is-active) {
+        color: @text !important;
+        background-color: @surface0 !important;
+
+        &:hover {
+          background-color: @surface1 !important;
+        }
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+
+      &.is-active {
+        color: @base !important;
+        background-color: @accent !important;
+
+        &:hover {
+          background-color: darken(@accent, 5%) !important;
+        }
+
+        &:active, &:focus {
+          background-color: darken(@accent, 10%) !important;
+        }
+      }
+
+      &.btn--primary {
+        color: @base !important;
+        background-color: @accent !important;
+
+        &:hover {
+          background-color: darken(@accent, 5%) !important;
+        }
+
+        &:active, &:focus {
+          background-color: darken(@accent, 10%) !important;
+        }
+      }
+
+      &.btn--secondary {
+        color: @text !important;
+        background-color: @surface0 !important;
+
+        &:hover {
+          background-color: @surface1 !important;
+        }
+
+        &:active, &:focus {
+          background-color: @surface2 !important;
+        }
+      }
+    }
+
+    .set-main .domain-list:empty::after {
+      color: @teal !important;
+      background-color: @surface0 !important;
+      border-color: @overlay0 !important;
     }
 
     .app_root__4_CLK {
@@ -1466,6 +1575,14 @@
       color: @mantle !important;
     }
 
+    .frm__label,
+    .frm__select select,
+    .frm__select,
+    .no-touch .tile-nav--sm.can-scroll,
+    .modal {
+      color: @text !important;
+    }
+
     .modal__header,
     .modal__footer,
     .modal__box,
@@ -1480,10 +1597,13 @@
     .set-bookmarklet,
     .set-reset,
     .search__autocomplete,
-    .frm__input,
-    .frm__color__swatch {
-      border-color: @surface0 !important;
+    .frm__input {
+      border-color: @overlay0 !important;
       background-color: @crust !important;
+    }
+
+    .frm__color__swatch {
+      border-color: @overlay0 !important;
     }
 
     .sep--before::before,
@@ -1506,7 +1626,7 @@
     .set-header--fixed .tileview--grid .metabar--fixed,
     .tileview--grid .metabar--fixed.is-stuck {
       background-color: @surface0;
-      border-top-color: @surface0;
+      border-color: @overlay0 !important;
     }
 
     .modal--dropdown--region.modal--popout .frm__input,
@@ -1525,9 +1645,6 @@
     .set-bookmarklet__input,
     .howItWorksSection_downloadsCard__U3Ph9,
     .metabar__grid-btn,
-    .feedback-btn__icon-wrap .set-bookmarklet__input .btn,
-    .btn.btn--secondary,
-    .btn.is-disabled,
     input,
     textarea,
     .frm__input,
@@ -1552,14 +1669,14 @@
       background-color: @surface0 !important;
     }
     .module--carousel__item {
-      border-color: @surface1 !important;
+      border-color: @overlay1 !important;
     }
 
     .modal__header,
     .module__section,
     .module__section:first-child.place-detail__section--tab,
     .module__clickable-header {
-      border-color: @surface1 !important;
+      border-color: @overlay1 !important;
     }
 
     .btn.is-disabled:hover,
@@ -1568,7 +1685,7 @@
     .btn.btn--skeleton:hover,
     .module__footer-carousel__label:hover {
       background-color: @surface2 !important;
-      border-color: @surface2 !important;
+      border-color: @overlay0 !important;
     }
     .is-checked .frm__switch__label.btn {
       background-color: @accent !important;
@@ -1728,9 +1845,9 @@
     }
 
     .settings-page-wrapper.is-checked {
-      border-color: @blue;
-      background-color: @sapphire !important;
-      color: @mantle !important;
+      border-color: @overlay0 !important;
+      background-color: @accent !important;
+      color: @base !important;
     }
     .modal--dropdown--settings
       .settings-dropdown--section
@@ -1782,7 +1899,7 @@
 
     .search--header {
       background-color: @surface0;
-      border-color: @surface0;
+      border-color: @overlay0;
     }
 
     .acp--highlight,
